# clippy

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-TW.md  build.sh  docker-compose.yaml  setup.sh
.github/workflows/: create_release.yaml
backend/: .env.example  app.py  config.example.yaml  pyproject.toml  requirements.txt
docker/nginx/: default.conf
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: config.example.yaml
frontend/src/: App.jsx
frontend/src/components/: BlockItem.css  BlockItem.jsx  ClipboardInterface.css  ClipboardInterface.jsx  Menu.css  Menu.jsx  Notification.css  Notification.jsx  SessionEntry.css  SessionEntry.jsx
frontend/src/context/: SessionContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/utils/: api.js  config.js  encryption.js
logo/: logo.ai
