[project]
name = "clippy-backend"
version = "0.1.0"
description = "Clippy - Collaborative clipboard backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
]
